; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/jbig2dec/extr_jbig2_generic.c_jbig2_decode_generic_region_TPGDON.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/jbig2dec/extr_jbig2_generic.c_jbig2_decode_generic_region_TPGDON.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_13__ = type { i32 }
%struct.TYPE_14__ = type { i32 }

@JBIG2_SEVERITY_FATAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"unsupported GBTEMPLATE (%d)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_13__*, %struct.TYPE_14__*, i32*, i32*, i32*)* @jbig2_decode_generic_region_TPGDON to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @jbig2_decode_generic_region_TPGDON(i32* %0, %struct.TYPE_13__* %1, %struct.TYPE_14__* %2, i32* %3, i32* %4, i32* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_13__*, align 8
  %10 = alloca %struct.TYPE_14__*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  store i32* %0, i32** %8, align 8
  store %struct.TYPE_13__* %1, %struct.TYPE_13__** %9, align 8
  store %struct.TYPE_14__* %2, %struct.TYPE_14__** %10, align 8
  store i32* %3, i32** %11, align 8
  store i32* %4, i32** %12, align 8
  store i32* %5, i32** %13, align 8
  %14 = load %struct.TYPE_14__*, %struct.TYPE_14__** %10, align 8
  %15 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  switch i32 %16, label %49 [
    i32 0, label %17
    i32 1, label %25
    i32 2, label %33
    i32 3, label %41
  ]

17:                                               ; preds = %6
  %18 = load i32*, i32** %8, align 8
  %19 = load %struct.TYPE_13__*, %struct.TYPE_13__** %9, align 8
  %20 = load %struct.TYPE_14__*, %struct.TYPE_14__** %10, align 8
  %21 = load i32*, i32** %11, align 8
  %22 = load i32*, i32** %12, align 8
  %23 = load i32*, i32** %13, align 8
  %24 = call i32 @jbig2_decode_generic_template0_TPGDON(i32* %18, %struct.TYPE_13__* %19, %struct.TYPE_14__* %20, i32* %21, i32* %22, i32* %23)
  store i32 %24, i32* %7, align 4
  br label %59

25:                                               ; preds = %6
  %26 = load i32*, i32** %8, align 8
  %27 = load %struct.TYPE_13__*, %struct.TYPE_13__** %9, align 8
  %28 = load %struct.TYPE_14__*, %struct.TYPE_14__** %10, align 8
  %29 = load i32*, i32** %11, align 8
  %30 = load i32*, i32** %12, align 8
  %31 = load i32*, i32** %13, align 8
  %32 = call i32 @jbig2_decode_generic_template1_TPGDON(i32* %26, %struct.TYPE_13__* %27, %struct.TYPE_14__* %28, i32* %29, i32* %30, i32* %31)
  store i32 %32, i32* %7, align 4
  br label %59

33:                                               ; preds = %6
  %34 = load i32*, i32** %8, align 8
  %35 = load %struct.TYPE_13__*, %struct.TYPE_13__** %9, align 8
  %36 = load %struct.TYPE_14__*, %struct.TYPE_14__** %10, align 8
  %37 = load i32*, i32** %11, align 8
  %38 = load i32*, i32** %12, align 8
  %39 = load i32*, i32** %13, align 8
  %40 = call i32 @jbig2_decode_generic_template2_TPGDON(i32* %34, %struct.TYPE_13__* %35, %struct.TYPE_14__* %36, i32* %37, i32* %38, i32* %39)
  store i32 %40, i32* %7, align 4
  br label %59

41:                                               ; preds = %6
  %42 = load i32*, i32** %8, align 8
  %43 = load %struct.TYPE_13__*, %struct.TYPE_13__** %9, align 8
  %44 = load %struct.TYPE_14__*, %struct.TYPE_14__** %10, align 8
  %45 = load i32*, i32** %11, align 8
  %46 = load i32*, i32** %12, align 8
  %47 = load i32*, i32** %13, align 8
  %48 = call i32 @jbig2_decode_generic_template3_TPGDON(i32* %42, %struct.TYPE_13__* %43, %struct.TYPE_14__* %44, i32* %45, i32* %46, i32* %47)
  store i32 %48, i32* %7, align 4
  br label %59

49:                                               ; preds = %6
  %50 = load i32*, i32** %8, align 8
  %51 = load i32, i32* @JBIG2_SEVERITY_FATAL, align 4
  %52 = load %struct.TYPE_13__*, %struct.TYPE_13__** %9, align 8
  %53 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %52, i32 0, i32 0
  %54 = load i32, i32* %53, align 4
  %55 = load %struct.TYPE_14__*, %struct.TYPE_14__** %10, align 8
  %56 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %55, i32 0, i32 0
  %57 = load i32, i32* %56, align 4
  %58 = call i32 @jbig2_error(i32* %50, i32 %51, i32 %54, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i32 %57)
  store i32 %58, i32* %7, align 4
  br label %59

59:                                               ; preds = %49, %41, %33, %25, %17
  %60 = load i32, i32* %7, align 4
  ret i32 %60
}

declare dso_local i32 @jbig2_decode_generic_template0_TPGDON(i32*, %struct.TYPE_13__*, %struct.TYPE_14__*, i32*, i32*, i32*) #1

declare dso_local i32 @jbig2_decode_generic_template1_TPGDON(i32*, %struct.TYPE_13__*, %struct.TYPE_14__*, i32*, i32*, i32*) #1

declare dso_local i32 @jbig2_decode_generic_template2_TPGDON(i32*, %struct.TYPE_13__*, %struct.TYPE_14__*, i32*, i32*, i32*) #1

declare dso_local i32 @jbig2_decode_generic_template3_TPGDON(i32*, %struct.TYPE_13__*, %struct.TYPE_14__*, i32*, i32*, i32*) #1

declare dso_local i32 @jbig2_error(i32*, i32, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
